cabal-version:      3.14
name:               haskript-tfd
version:            0.1.0.0
synopsis:           A wrapper around an updated TinyFileDialogs.
-- description:
homepage:           https://github.com/haskript/haskript-tfd/
license:            MIT
license-file:       LICENSE
author:             Liam Zhu
maintainer:         liam.zhu@protonmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Haskript.GraphicsUI.TFD.IOActions
        Haskript.GraphicsUI.TFD.LibraryQueries
    c-sources:
        cbits/tinyfiledialogs.c
    include-dirs:
        cbits/
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: GHC2024

test-suite haskript-tfd-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        haskript-tfd
